<resources>
    <string name="app_name">SocialMedia</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="dummy_name">Tony Stark</string>
    <string name="dummy_content">Satu dua tiga empat lima enam tujuh delapan sembilan sepuluh sebelas dua belas tiga belas</string>
    <string name="hapus_post">Hapus post</string>
</resources>
